--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<title>Шпора</title>
-	<meta http-equiv="content-type" content="text/html; charset=windows-1251" />
+		<title>ГГЇГ®Г°Г </title>
+	<meta http-equiv="content-type" content="text/html; charset="windows-1251" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -17,8 +17,8 @@
 				<article id="main">
 
 					<header class="special">
-						<h2>Шпаргалка</h2>
-						<h3>Геометрия, 10 класс</h3>
+						<h2>ГГЇГ Г°ГЈГ Г«ГЄГ </h2>
+						<h3>ГѓГҐГ®Г¬ГҐГІГ°ГЁГї, 10 ГЄГ«Г Г±Г±</h3>
 						
 					</header>
 					<header class="special container borderheader">
@@ -33,12 +33,12 @@
 										<div class="content">
 											<section>
 												<header>
-													<h3>Выбор темы</h3>
+													<h3>Г‚Г»ГЎГ®Г° ГІГҐГ¬Г»</h3>
 												</header>
-<p> <a href="perp.html"> Перпендикулярность</a><p>
-<p> <a href="ugol.html"> Угол</a><p>	
-<p> <a href="dist.html"> Расстояние</a><p>	
-<p> <a href="para.html"> Параллельность</a><p>		
+<p> <a href="perp.html"> ГЏГҐГ°ГЇГҐГ­Г¤ГЁГЄГіГ«ГїГ°Г­Г®Г±ГІГј</a><p>
+<p> <a href="ugol.html"> Г“ГЈГ®Г«</a><p>	
+<p> <a href="dist.html"> ГђГ Г±Г±ГІГ®ГїГ­ГЁГҐ</a><p>	
+<p> <a href="para.html"> ГЏГ Г°Г Г«Г«ГҐГ«ГјГ­Г®Г±ГІГј</a><p>		
 
 											</section>
 										</div>
