--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Шпора</title>
-	<meta http-equiv="content-type" content="text/html; charset="windows-1251" />
+	<meta http-equiv="content-type" content="text/html; charset=windows-1251" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
