--- a/perp.html
+++ b/perp.html
@@ -87,7 +87,7 @@
 									<!-- Sidebar -->
 										<div class="sidebar" style="max-width:73%">
 											<section>
-												<img src="palya.png" width="300" height="200"></img>
+												<img src="teor_perp_t_pl_img.png" width="300" height="200"></img>
 											</section>
 										</div>
 
@@ -116,7 +116,7 @@
 									<!-- Sidebar -->
 										<div class="sidebar" style="max-width:73%">
 											<section>
-												<img src="palya.png" width="300" height="200"></img>
+												<img src="perp_pl_prizn_img.png" width="300" height="200"></img>
 											</section>
 
 										</div>
@@ -145,7 +145,7 @@
 									<!-- Sidebar -->
 										<div class="sidebar" style="max-width:73%">
 											<section>
-												<img src="palya.png" width="300" height="200"></img>
+												<img src="teor_3_perp_obr_img.png" width="300" height="200"></img>
 											</section>
 										</div>
 
