--- a/ugol.html
+++ b/ugol.html
@@ -15,7 +15,7 @@
 
 					<header class="special">
 						<h2><a href="index.html">Шпаргалка</a></h2>
-						<h3>Перпендикулярность</h3>
+						<h3>Угол в стереометрии</h3>
 
 					<!-- One -->
 <section class="wrapper style4 container">
@@ -26,7 +26,7 @@
 									<!-- Sidebar -->
 										<div class="sidebar" style="max-width:73%">
 											<section>
-												<img src="palya.png" width="300" height="200"></img>
+												<img src="ugol_pr_pl_opr_img.png" width="300" height="200"></img>
 											</section>
 										</div>
 
@@ -37,10 +37,10 @@
 										<div class="content">
 											<section>
 												<header>
-													<h3>Определение перпендикуляра между прямой </h3>
+													<h3>Определение угла между прямой и плоскостью</h3>
 												</header>
-<p>Прямая перпендикулярна плоскости тогда и только тогда, когда они перпендикулярны любой прямой, лежащей в этой плоскости<p>	
-<p>b⟂α  ↔ для Ɐa⊂ α: b⟂a</p>
+<p>Угол между прямой и плоскостью равен углу между прямой и её проекцией на плоскость.<p>	
+<p><img src="ugol_pr_pl_opr.png"></p>
 											</section>
 										</div>
 
@@ -55,7 +55,7 @@
 									<!-- Sidebar -->
 										<div class="sidebar" style="max-width:73%">
 											<section>
-												<img src="palya.png" width="300" height="200"></img>
+												<img src="ugol_pl_opr_img.png" width="300" height="200"></img>
 											</section>
 										</div>
 
@@ -66,10 +66,10 @@
 										<div class="content">
 											<section>
 												<header>
-													<h3>Признак перпендикулярности между прямой и плоскостью</h3>
+													<h3>Угол между плоскостями</h3>
 												</header>
-<p>Если прямая перпендикулярна двум прямым в плоскости, то она перпендикулярна всей плоскости<p>	
-<p><img src="perp_pr_pl_prizn.png"></p>
+<p>Линейный угол двугранного угла – это угол между двумя лучами, перпендикулярными границе полуплоскостей.<p>	
+<p><img src="ugol_pl_opr.png"></p>
 											</section>
 										</div>
 
@@ -87,7 +87,7 @@
 									<!-- Sidebar -->
 										<div class="sidebar" style="max-width:73%">
 											<section>
-												<img src="palya.png" width="300" height="200"></img>
+												<img src="skr_pr_opr_img.png" width="300" height="200"></img>
 											</section>
 										</div>
 
@@ -98,9 +98,9 @@
 										<div class="content">
 											<section>
 												<header>
-													<h3>Теорема о перпендикуляре из точки к плоскости </h3>
+													<h3>Скрещивающиеся прямые </h3>
 												</header>
-<p><img src="teor_perp_t_pl.png"><p>	
+<p>Скрещивающиеся прямые — прямые, которые не лежат в одной плоскости <br> <img src="skr_pr_opr.png"><p>	
 											</section>
 										</div>
 
@@ -116,7 +116,7 @@
 									<!-- Sidebar -->
 										<div class="sidebar" style="max-width:73%">
 											<section>
-												<img src="palya.png" width="300" height="200"></img>
+												<img src="skr_pr_ugol_img.png" width="300" height="200"></img>
 											</section>
 
 										</div>
@@ -128,50 +128,15 @@
 										<div class="content">
 											<section>
 												<header>
-													<h3>Признак перпендикулярности плоскостей</h3>
+													<h3>Угол между скрещивающимися прямыми</h3>
 												</header>
-<p><img src = "perp_pl_prizn.png"><p>	
+<p><img src = "skr_pr_ugol.png"><p>	
 											</section>
 										</div>
 
 								</div>
 							</div>
 						</section>
-<section class="wrapper style4 container">
-
-							<div class="row gtr-150">
-								<div class="col-4 col-12-narrower">
-
-									<!-- Sidebar -->
-										<div class="sidebar" style="max-width:73%">
-											<section>
-												<img src="palya.png" width="300" height="200"></img>
-											</section>
-										</div>
-
-								</div>
-								<div class="col-8">
-
-									<!-- Content -->
-										<div class="content">
-											<section>
-												<header>
-													<h3>Теорема о 3 перпендикулярах </h3>
-												</header>
-<p>Прямая<p>	
-<p><img src = "teor_3_perp_pr.png"></p>
-<p>Обратная<p>	
-<p><img src = "teor_3_perp_obr.png"></p>
-											</section>
-										</div>
-
-								</div>
-							</div>
-						</section>
-
-
-				
-				
 
 		</div>
 <footer id="footer">
