--- a/dist.html
+++ b/dist.html
@@ -1,3 +1,4 @@
+
 <html>
 	<head>
 		<title>Evanfy</title>
@@ -15,7 +16,7 @@
 
 					<header class="special">
 						<h2><a href="index.html">Шпаргалка</a></h2>
-						<h3>Перпендикулярность</h3>
+						<h3>Расстояние</h3>
 
 					<!-- One -->
 <section class="wrapper style4 container">
